--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@exponent/ex-navigation": "^2.1.3",
     "@exponent/vector-icons": "~2.0.3",
     "exponent": "~11.0.2",
+    "dateformat" : "~2.0.0",
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
     "react-native-button": "^1.7.1"
