--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dateformat" : "~2.0.0",
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
-    "react-native-button": "^1.7.1"
+    "react-native-button": "^1.7.1",
+    "react-native-searchbar": "~1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
