--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.clonedeep": "^4.5.0",
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
+    "react-native-app-intro": "~1.1.5",
     "react-native-button": "^1.7.1",
     "react-native-gifted-chat": "0.0.10",
     "react-native-searchbar": "~1.0.2",
